implementada a busca de catalogos com paginação
